--- a/templates/movies.html
+++ b/templates/movies.html
@@ -1,3 +1,9 @@
+<!--
+FILE: movies.html
+CONTRIBUTORS:
+- Brandon Grimaldo: Created movies page with filters and movie card display
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
