--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,3 +1,9 @@
+<!--
+FILE: profile.html
+CONTRIBUTORS:
+- Brandon Grimaldo: Created user profile page with preferences, ratings and watchlist management
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
