--- a/templates/profile_setup.html
+++ b/templates/profile_setup.html
@@ -1,3 +1,9 @@
+<!--
+FILE: profile_setup.html
+CONTRIBUTORS:
+- Brandon Grimaldo: Created profile setup page with dropdown genre selector and form validation
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
