--- a/templates/search.html
+++ b/templates/search.html
@@ -1,3 +1,9 @@
+<!--
+FILE: search.html
+CONTRIBUTORS:
+- Brandon Grimaldo: Created search results page with movie and TV show listings
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
