--- a/templates/tv_shows.html
+++ b/templates/tv_shows.html
@@ -1,3 +1,9 @@
+<!--
+FILE: tv_shows.html
+CONTRIBUTORS:
+- Brandon Grimaldo: Created TV shows page with filters and show card display
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
