--- a/templates/watchlist.html
+++ b/templates/watchlist.html
@@ -1,3 +1,9 @@
+<!--
+FILE: watchlist.html
+CONTRIBUTORS:
+- Brandon Grimaldo: Created watchlist page with movie/TV show display and removal functionality
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
