--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,3 +1,9 @@
+<!--
+FILE: signup.html
+CONTRIBUTORS:
+- Brandon Grimaldo: Created signup form with validation and user registration
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
